<resources>
    <string name="app_name">MaxMart</string>
    <string name="confirm_your_country_code_and_enter_your_phone_number">Please confirm your country code and enter your phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="verify">Verify</string>
    <string name="enter">We\'ve sent an SMS with an activation code to your phone </string>
    <string name="welcome">Welcome</string>
    <string name="here_we_go">Here we go !</string>
    <string name="please_provide_your_name_address_and_optional_profile_photo">Enter your name, address and optional profile picture</string>
    <string name="address">Address (required)</string>
    <string name="finish">Finish</string>
    <string name="name">Name (required)</string>
    <string name="signout">Logout</string>
    <string name="hello_maxwell">Hello,maxwell</string>
    <string name="submit">Submit</string>
    <string name="products">Products</string>

    <string name="product_name">Product Name</string>
    <string name="product_price">Product price</string>
    <string name="category">Category</string>
    <string name="upload">UPLOAD</string>
    <string name="des">Description</string>
    <string name="verify_upload">Verify Upload</string>
    <string name="vans_oldskool">Vans OldSkool</string>
    <string name="_15">15</string>
    <string name="sneaker">Sneaker</string>
    <string name="category_products">Category Products</string>
    <string name="add_product">Add product</string>
    <string name="fashion">FASHION</string>
    <string name="games">GAMES</string>
    <string name="gamesrf">Games</string>
    <string name="dfashion">Fashion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_phone">Your Phone</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="enter_code">Enter code</string>
    <string name="call">Call</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="your_info">Your info</string>
    <string name="price_gh">Price (GH₵)</string>
    <string name="namelogin">"Name "</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
    <string name="details">Details</string>
    <string name="cart_list">Cart list</string>
    <string name="cart">Cart</string>
    <string name="total">TOTAL</string>
    <string name="search_product">Search Product</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="checkout">CHECKOUT</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="home_office_delivery"><![CDATA[Home & Office Delivery]]></string>
</resources>