<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:elevation="20dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"

            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="250dp"
                android:orientation="vertical"

                android:layout_height="100dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginTop="3dp"
                    android:textSize="20sp"
                    android:text="@string/vans_oldskool"
                    android:textColor="@color/gey"
                    android:id="@+id/product_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="17dp"
                    android:textColor="@color/gey"
                    android:textSize="15sp"
                    android:layout_marginTop="3dp"
                    android:text="@string/sneaker"
                    android:id="@+id/product_category"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="17dp"
                    android:textColor="@color/gey"
                    android:textSize="15sp"
                    android:inputType="number"
                    android:layout_marginTop="3dp"
                    android:text="@string/_15"
                    android:id="@+id/product_price"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="17dp"
                    android:textColor="@color/gey"
                    android:textSize="15sp"
                    android:layout_marginTop="3dp"
                    android:text="@string/_15"
                    android:id="@+id/product_date"/>




            </LinearLayout>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/delete_24"
                android:id="@+id/product_delete"
                android:padding="5dp"
                android:layout_marginStart="1dp"
                android:layout_gravity="center_vertical"/>





        </LinearLayout>



    </androidx.cardview.widget.CardView>

</RelativeLayout>