<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="maxwell.vex.maxmart.UserCart">

    <!-- Actionbar-->
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/GreyDark"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backBtn_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:background="@color/GreyDark"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="70dp"
            android:text="@string/cart"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textSize="20sp"
             />
        <!--Cart badge-->
        <TextView
            android:id="@+id/cart_badgeTV"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:fontFamily="sans-serif-medium"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:background="@drawable/cart_badge"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            />

    </RelativeLayout>

    <!-- RecyclerView-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/toolbarRL"
       />

    <!-- empty cart placeholder-->
    <RelativeLayout
        android:id="@+id/empty_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarRL"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/your_cart_is_empty"
                android:textSize="30sp" />
        </LinearLayout>

    </RelativeLayout>

    <!-- total & checkOut container-->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardElevation="5dp">

        <LinearLayout
            android:id="@+id/total_price_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:text="@string/total" />

                <TextView
                    android:id="@+id/cart_totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:text="@string/total"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/cart_checkOutBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@color/GreyDark"
                    android:gravity="center"
                    android:text="@string/checkout"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textColor="@color/white"
                   />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>